@@ -16,7 +16,7 @@
    |          Jim Winstead <jimw@php.net>                                 |
    +----------------------------------------------------------------------+
  */
-/* $Id: fopen_wrappers.c,v 1.153.2.7 2003/07/30 17:55:21 iliaa Exp $ */
+/* $Id: fopen_wrappers.c,v 1.153.2.8 2004/02/10 16:09:56 iliaa Exp $ */
 
 /* {{{ includes
  */
@@ -132,15 +132,15 @@ PHPAPI int php_check_specific_open_basedir(const char *basedir, const char *path
 	if ((expand_filepath(path, resolved_name TSRMLS_CC) != NULL) && (expand_filepath(local_open_basedir, resolved_basedir TSRMLS_CC) != NULL)) {
 		/* Handler for basedirs that end with a / */
 		resolved_basedir_len = strlen(resolved_basedir);
-		if (basedir[strlen(basedir)-1] == PHP_DIR_SEPARATOR && resolved_basedir[resolved_basedir_len -1] != PHP_DIR_SEPARATOR) {
-			resolved_basedir[resolved_basedir_len] = '/';
+		if (resolved_basedir[resolved_basedir_len -1] != PHP_DIR_SEPARATOR) {
+			resolved_basedir[resolved_basedir_len] = PHP_DIR_SEPARATOR;
 			resolved_basedir[++resolved_basedir_len] = '\0';
 		}
 		
 		if (path[strlen(path)-1] == PHP_DIR_SEPARATOR) {
 			resolved_name_len = strlen(resolved_name);
 			if (resolved_name[resolved_name_len - 1] != PHP_DIR_SEPARATOR) {
-				resolved_name[resolved_name_len] = '/';
+				resolved_name[resolved_name_len] = PHP_DIR_SEPARATOR;
 				resolved_name[++resolved_name_len] = '\0';
 			}
 		}
